    Standardlager der einzelnen Bestandteile verwendet.
    Hat das Bestandteil kein Standardlager, so wird das "Standard-Lager für Auslagern ohne Prüfung auf Bestand"
    verwendet und ohne Prüfung ausgelagert. Ist dieses nicht gesetzt, wird eine Fehlermeldung erzeugt.

  - Neues Recht "Verknüpfte Belege", standardmäßig erlaubt. Betrifft alle
    Belege und die Projektstammdaten

Administrative Änderungen

  - Diverse Textsuchen werden jetzt durch eine neue Klasse Indizes
    beschleunigt. Dafür wird die benötigte Minimalversion von Postgres auf 9.1
    angehoben.

2016-07-05 - Release 3.4.1

kleinere neue Features und Detailverbesserungen:

  - Erweitern der Zahlungsbedingungen um unterschiedliche Texte für
    Angebote/Aufträge auf der einen Seite und Rechnungen auf der
    anderen Seite.
  - Auftrag um Druckvariante Gelangensbestätigung erweitert.
  - Lagereingangs-Typ 'gefertigt' hinzugefügt.
  - Fertigungsdatum von Erzeugnissen und Bestandteilen von Erzeugnissen
    in Lagerbuchungen mitprotokollieren (Tagesdatum der Fertigung).
  - Wiederkehrende Rechnungen können nun automatisch per E-Mail
    verschickt werden.
  - Die meisten Suchmasken ignorieren nun bei Teilwortsuchen führende
    und anhängende Leerzeichen.
  - Abteilung in Verkauf->Berichte-Rechnungen anzeigen lassen.
  - Customer-Picker beim Projekt erzeugen eingebaut.
  - Es gibt jetzt Schnellsuchen zu den meisten Belegen und Stammdaten in der
    Leiste am oberen Rand, konfigurierbar in der Mandantenkonfiguration (Details s.u.)
  - Wird in der Konfigurations-Datei (kivitendo.conf)
    [mail_delivery]/method auf einen leeren Wert gesetzt wird jetzt der
    Mailversand komplett ausgeschaltet, vorher wurde bei
    Werten die nicht 'sendmail' oder 'smtp' sind SMTP als Vorauswahl benutzt.
  - Änderungen des Verkaufspreises von Artikeln, die Bestandteile von
    Erzeugnissen sind, haben nun keine Auswirkungen auf die
    Verkaufspreise der Erzeugnisse mehr.