@@ -1089,6 +1089,7 @@ $self->{texts} = {
   'Edit project link'           => 'Projektverknüpfung bearbeiten',
   'Edit project status'         => 'Projektstatus bearbeiten',
   'Edit project type'           => 'Projekttypen bearbeiten',
+  'Edit purchase letters'       => 'Einkaufsbrief erstellen',
   'Edit purchase price rule'    => 'Einkaufspreisregel bearbeiten',
   'Edit requirement spec'       => 'Pflichtenheft bearbeiten',
   'Edit requirement spec status' => 'Pflichtenheftstatus bearbeiten',
@@ -2544,6 +2545,7 @@ $self->{texts} = {
   'Show overdue sales quotations and requests for quotations...' => 'Überfällige Angebote und Preisanfragen anzeigen...',
   'Show parts'                  => 'Artikel anzeigen',
   'Show parts longdescription (notes) in select list' => 'Langtext in Auswahlliste bei mehreren Treffern im Stammdaten-Bestand anzeigen',
+  'Show purchase letters report' => 'Einkaufsbriefe zeigen',
   'Show requirement spec'       => 'Pflichtenheft anzeigen',
   'Show requirement spec template' => 'Pflichtenheftvorlage anzeigen',
   'Show sales letters report'   => 'Verkaufsbrief anzeigen',
