@@ -2,7 +2,7 @@
 % config: tag-style=$( )$
 $( USE KiviLatex )$
 $( USE P )$
-$( SET customer = letter.customer )$
+$( SET customer = letter.customer_vendor )$
 \input{inheaders.tex}
 $( KiviLatex.required_packages_for_html )$
 
