@@ -17,11 +17,17 @@
    <th align='right'>[% 'Letternumber' | $T8 %]</th>
    <td>[% L.input_tag('filter.letternumber:substr::ilike', filter.letternumber_substr__ilike, style='width:250px') %]</th>
   </tr>
+[%- IF SELF.is_sales %]
   <tr>
    <td align="right">[% 'Customer' | $T8 %]</td>
    <td>[% L.customer_vendor_picker('filter.customer_id', filter.customer_id, type='customer', style='width:250px') %]</td>
   </tr>
-
+[%- ELSE %]
+  <tr>
+   <td align="right">[% 'Vendor' | $T8 %]</td>
+   <td>[% L.customer_vendor_picker('filter.vendor_id', filter.vendor_id, type='vendor', style='width:250px') %]</td>
+  </tr>
+[%- END %]
   <tr>
    <td align="right">[% 'Contact' | $T8 %]</td>
    <td>[% L.input_tag('filter.contact.cp_name:substr::ilike', filter.contact.cp_name_substr__ilike, style='width:250px') %]</th>
@@ -45,6 +51,7 @@
   </tr>
  </table>
 
+ [% L.hidden_tag('is_sales', SELF.is_sales) %]
  [% L.hidden_tag('sort_by', FORM.sort_by) %]
  [% L.hidden_tag('sort_dir', FORM.sort_dir) %]
  [% L.hidden_tag('page', FORM.page) %]
